--- a/index.html
+++ b/index.html
@@ -147,5 +147,81 @@
         </div>
       </div>
     </section>
+    <section class="chiefs">
+      <div class="container">
+        <div class="chiefs__title">Наши<span> Повара</span></div>
+        <div class="chiefs__cardholder">
+          <div class="chiefs__card">
+            <img src="./assets/img/chief1.png" alt="chief" />
+          </div>
+          <div class="chiefs__card">
+            <img src="./assets/img/chief2.png" alt="chief" />
+          </div>
+          <div class="chiefs__card">
+            <img src="./assets/img/chief3.png" alt="chief" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="menu">
+      <div class="container">
+        <div class="menu__title">Наше меню</div>
+
+        <div class="menu__cardholder">
+          <div class="menu__card">
+            <div class="pin">RECOMMENDED</div>
+            <div class="menu__img">
+              <img src="./assets/img/burger.png" alt="burger" />
+            </div>
+            <div class="circle-wrap">
+              <div class="menu__circle">420</div>
+            </div>
+            <div class="menu__subtitle">Гамбургер макси</div>
+            <div class="menu__text">Максимально толстый слой мяса</div>
+            <a href="#" class="menu__btn btn">ЗАКАЗАТЬ</a>
+          </div>
+          <div class="menu__card">
+            <div class="menu__img">
+              <img src="./assets/img/burger.png" alt="burger" />
+              <div class="circle-wrap">
+                <div class="menu__circle">420</div>
+              </div>
+            </div>
+            <div class="menu__subtitle">Гамбургер макси</div>
+            <div class="menu__text">Максимально толстый слой мяса</div>
+            <a href="#" class="menu__btn btn">ЗАКАЗАТЬ</a>
+          </div>
+          <div class="menu__card">
+            <div class="menu__img">
+              <img src="./assets/img/burger.png" alt="burger" />
+              <div class="circle-wrap">
+                <div class="menu__circle">420</div>
+              </div>
+            </div>
+            <div class="menu__subtitle">Гамбургер макси</div>
+            <div class="menu__text">Максимально толстый слой мяса</div>
+            <a href="#" class="menu__btn btn">ЗАКАЗАТЬ</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="review">
+      <div class="review-wrap">
+        <p class="review__text">
+          Я надолго запомню мой День рождения, проведённый в этом ресторане!
+          Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде
+          фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и
+          родственникам также за рубежом, путешествующих в Санкт-Петербург!!!
+        </p>
+        <img src="./assets/img/nikolay.png" alt="avatar" />
+        <h4 class="review-item">Посетитель</h4>
+        <p>Николай</p>
+        <div class="ellipse-row">
+          <img src="./assets/img/ellipse.png" alt="ellipse" />
+          <img src="./assets/img/ellipse.png" alt="ellipse" />
+          <img src="./assets/img/orange_ellipse.png" alt="ellipse" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
